--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,3 +5,9 @@
 <div [@routeAnimation]="getAnimtionData(routerOutlet)">
   <router-outlet #routerOutlet="outlet"></router-outlet>
 </div>
+<ngx-spinner bdColor="rgba(100,149,237,0.5)" [fullScreen]="true" size="medium" type="cube-transition" color="#212529">
+  <p class="display-5">Loading</p>
+</ngx-spinner>
+<ngx-spinner name="AuthSpinner" bdColor="rgba(51,51,51,0.5)" size="medium" type="ball-pulse-sync" color="#fff">
+  <p class="display-5">Authenticating</p>
+</ngx-spinner>
