--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,7 +1,5 @@
 <form #loginForm="ngForm" (ngSubmit)="signIn(loginForm.value)">
-  <div
-    class="d-md-flex justify-content-center align-items-center mt-md-5 mt-5 col-sm-12"
-  >
+  <div class="d-md-flex justify-content-center align-items-center mt-md-5 mt-5 col-sm-12">
     <div class="card login-div">
       <div class="card-body">
         <div class="card-title text-center display-4">
@@ -18,17 +16,8 @@
             <div class="input-group-prepend">
               <span class="input-group-text"><i class="fas fa-user"></i></span>
             </div>
-            <input
-              type="text"
-              name="email"
-              id="email"
-              ngModel
-              class="form-control"
-              placeholder="Email"
-              emailValidator
-              required
-              #email="ngModel"
-            />
+            <input type="text" name="email" id="email" ngModel class="form-control" placeholder="Email" emailValidator
+              required #email="ngModel" />
           </div>
         </div>
         <div class="form-group">
@@ -36,31 +25,16 @@
             <div class="input-group-prepend">
               <span class="input-group-text"><i class="fas fa-key"></i></span>
             </div>
-            <input
-              type="password"
-              name="password"
-              id="password"
-              ngModel
-              class="form-control"
-              placeholder="Password"
-              minlength="8"
-              maxlength="15"
-              required
-              passwordValidator
-              #password="ngModel"
-            />
+            <input type="password" name="password" id="password" ngModel class="form-control" placeholder="Password"
+              minlength="8" maxlength="15" required passwordValidator #password="ngModel" />
           </div>
         </div>
         <div class="form-group">
-          <button
-            type="submit"
-            class="btn btn-primary btn-block"
-            [disabled]="!loginForm.valid"
-          >
+          <button type="submit" class="btn btn-primary btn-block" [disabled]="!loginForm.valid">
             Sign In
           </button>
           <div class="mt-1" style="font-size:small;">
-            Don't have an account?&nbsp;<a href="signUp">SignUp</a>
+            Don't have an account?&nbsp;<a routerLink="/signUp">SignUp</a>
           </div>
         </div>
       </div>
