--- a/src/app/students/student-list/students.component.html
+++ b/src/app/students/student-list/students.component.html
@@ -4,7 +4,7 @@
       <ul>
         <!--(click)="getStudent(student.ID)"-->
         <li *ngFor="let student of StudentsList; let i = index" class="list-group-item list-group-item-action"
-          style="cursor:pointer" [routerLink]="[student.ID]" @slide>
+          style="cursor:pointer;" [routerLink]="[student.ID]" @slide>
           <span class="badge badge-primary">{{ i }}</span>
           <a class="card-link">{{ student.Name }} </a>
           <span class="badge badge-pill badge-primary">{{ i }}</span>
