--- a/src/app/vidly/movies/movie-list/movie-list.component.css
+++ b/src/app/vidly/movies/movie-list/movie-list.component.css
@@ -7,11 +7,7 @@
 .far,
 .fas {
   font-weight: 300;
-  font-size: 2vw;
+  font-size: 1.5rem;
   cursor: pointer;
   padding: 5px;
-}
-
-a {
-  color: black;
 }
