--- a/src/app/vidly/vidly-home/vidly-home.component.html
+++ b/src/app/vidly/vidly-home/vidly-home.component.html
@@ -10,7 +10,7 @@
   >
 </nav> -->
 <div class="container-fluid">
-  <div class="w-100 text-center bg-light display-3">
+  <div class="w-100 text-center bg-light" style="font-size: 4vh">
     <p>Welcome to vidly</p>
   </div>
   <div class="row">
@@ -23,7 +23,9 @@
           <a routerLink="genres" routerLinkActive="active" [ngClass]="['nav-link']">Users</a></div>
         <div class="nav-item"><a routerLink="genres" routerLinkActive="active" class="nav-link">Genres</a>
         </div>
-        <div class="nav-item"><a routerLink="movies" routerLinkActive="active" class="nav-link">Movies</a></div>
+        <div class="nav-item"><a routerLink="movies" routerLinkActive="active" class="nav-link">Movies&emsp;<i
+              class="fas fa-film"></i>
+          </a></div>
       </nav>
     </div>
     <div class="col-10">
