--- a/src/app/vidly/vidly-home/vidly-home.component.html
+++ b/src/app/vidly/vidly-home/vidly-home.component.html
@@ -20,8 +20,10 @@
           <a routerLink="dashboard" routerLinkActive="active" [ngClass]="['nav-link']">Dashboard</a>
         </div>
         <div class="nav-item">
-          <a routerLink="genres" routerLinkActive="active" [ngClass]="['nav-link']">Users</a></div>
-        <div class="nav-item"><a routerLink="genres" routerLinkActive="active" class="nav-link">Genres</a>
+          <a routerLink="users" routerLinkActive="active" [ngClass]="['nav-link']">Users</a>
+        </div>
+        <div class="nav-item">
+          <a routerLink="genres" routerLinkActive="active" class="nav-link">Genres</a>
         </div>
         <div class="nav-item"><a routerLink="movies" routerLinkActive="active" class="nav-link">Movies&emsp;<i
               class="fas fa-film"></i>
