--- a/src/app/vidly/genres/genre-detail/genre-detail.component.html
+++ b/src/app/vidly/genres/genre-detail/genre-detail.component.html
@@ -1,32 +1,32 @@
-<div *ngIf="(Genre$ | async) as genre">
-  <form #genreForm="ngForm" (ngSubmit)="updateGenre(genreForm)">
-    <div class="form-row">
-      <div class="form-group col-md-4">
-        <Label for="name">Name</Label>
-        <input
-          type="text"
-          class="form-control"
-          name="name"
-          id="name"
-          [(ngModel)]="genre.name"
-          #name="ngModel"
-        />
+<form #genreForm="ngForm" (ngSubmit)="updateGenre(genreForm)">
+
+  <input type="hidden" name="id" id="id" [ngModel]="genre?.id" readonly #id="ngModel" />
+  <div class="container">
+    <div class="card">
+      <div class="card-header">
+        <span [routerLink]="['../']" style="cursor:pointer;"><i class="fas fa-long-arrow-alt-left"></i></span>
+        <span style="margin-left:45%">Genre</span>
       </div>
-      <div class="form-group col-md-4">
-        <Label for="id">ID</Label>
-        <input
-          type="text"
-          class="form-control"
-          name="id"
-          id="id"
-          [(ngModel)]="genre._id"
-          readonly
-          #id="ngModel"
-        />
+      <div class="card-body">
+        <div class="form-group">
+          <Label for="name" class="form-label">Name</Label>
+          <input type="text" class="form-control" name="name" id="name" [ngModel]="genre.name" #name="ngModel" required
+            minlength="5" maxlength="50" autofocus />
+        </div>
+        <div [ngSwitch]="pageMode">
+          <div *ngSwitchCase="operationMode.create" class="text-center">
+            <input type="button" value="Create" class="btn btn-primary" [disabled]="genreForm.invalid"
+              (click)="createGenre(genreForm.value)" />
+          </div>
+          <div *ngSwitchCase="operationMode.edit" class="text-center">
+            <input type="button" value="Update" class="btn btn-primary" [disabled]="genreForm.invalid"
+              (click)="updateGenre(genreForm.value)" />
+          </div>
+        </div>
       </div>
-      <div class="d-flex col-md-4 align-items-center mt-3">
-        <input type="submit" value="Save" class="btn btn-primary w-50" />
-      </div>
+      <!-- <div class="d-flex col-md-4 align-items-center mt-3">
+      <input type="submit" value="Save" class="btn btn-primary w-50" />
+    </div> -->
     </div>
-  </form>
-</div>
+  </div>
+</form>
