--- a/src/app/vidly/movies/movie-detail/movie-detail.component.html
+++ b/src/app/vidly/movies/movie-detail/movie-detail.component.html
@@ -1,12 +1,17 @@
 <form #movieForm="ngForm" enctype="multipart/form-data">
-  <div class="container">
+  <input type="hidden" name="coverPicID" [ngModel]="Movie?.coverPicID" #coverPicID="ngModel">
+  <input type="hidden" name="id" [ngModel]="Movie?.id" #id="ngModel">
+  <div class="">
     <div class="card">
       <div class="card-header">
         <span [routerLink]="['../']" style="cursor:pointer;"><i class="fas fa-long-arrow-alt-left"></i></span>
         <span style="margin-left:45%">Movie</span>
       </div>
       <div class="card-body">
-        <input type="hidden" name="id" [ngModel]="Movie?.id" #id="ngModel">
+        <div class="card-img">
+          <img id="coverPic" [src]="Movie?.coverPic" class="card-img" style="height:250px;width:100%;">
+          <!--  -->
+        </div>
         <div class="form-group">
           <label class="form-label">Title</label>
           <input type="text" class="form-control" name="title" required [ngModel]="Movie?.title" #title="ngModel">
