--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -1,8 +1,4 @@
-<form
-  [formGroup]="profileForm"
-  (ngSubmit)="signUp()"
-  enctype="multipart/form-data"
->
+<form [formGroup]="profileForm" (ngSubmit)="signUp()" enctype="multipart/form-data">
   <div class="d-md-flex justify-content-center align-items-center mt-md-5">
     <div class="card loginform">
       <div class="card-body">
@@ -11,86 +7,44 @@
           <hr />
         </div>
         <div class="form-group row">
-          <label for="name" class="col-sm-12 col-md-4 col-form-label"
-            >Name</label
-          >
+          <label for="name" class="col-sm-12 col-md-4 col-form-label">Name</label>
           <div class="col-sm-12 col-md-8">
-            <input
-              type="text"
-              class="form-control"
-              formControlName="name"
-              required
-            />
+            <input type="text" class="form-control" formControlName="name" required />
           </div>
         </div>
         <div class="form-group row">
-          <label for="name" class="col-sm-12 col-md-4 col-form-label"
-            >Email</label
-          >
+          <label for="name" class="col-sm-12 col-md-4 col-form-label">Email</label>
           <div class="col-sm-12 col-md-8">
-            <input
-              type="email"
-              class="form-control"
-              formControlName="email"
-              required
-            />
-            <div
-              *ngIf="email.dirty && email.errors?.InvalidEmail"
-              class="alert alert-danger"
-            >
+            <input type="email" class="form-control" formControlName="email" required />
+            <div *ngIf="email.dirty && email.errors?.InvalidEmail" class="alert alert-danger">
               Invalid email format
             </div>
           </div>
         </div>
         <div class="form-group row">
-          <label for="name" class="col-sm-12 col-md-4 col-form-label"
-            >Password</label
-          >
+          <label for="name" class="col-sm-12 col-md-4 col-form-label">Password</label>
           <div class="col-sm-12 col-md-8">
-            <input
-              type="password"
-              class="form-control"
-              formControlName="password"
-              required
-            />
+            <input type="password" class="form-control" formControlName="password" required />
           </div>
         </div>
         <div class="form-group row">
-          <label for="name" class="col-sm-12 col-md-4 col-form-label"
-            >Confirm Password</label
-          >
+          <label for="name" class="col-sm-12 col-md-4 col-form-label">Confirm Password</label>
           <div class="col-sm-12 col-md-8">
-            <input
-              type="password"
-              class="form-control"
-              formControlName="confirmPassword"
-            />
+            <input type="password" class="form-control" formControlName="confirmPassword" />
           </div>
         </div>
         <div *ngIf="profileForm.errors" class="alert alert-danger">
-          Passwords didnot match
+          Passwords did not match
         </div>
         <div class="form-group row">
-          <label for="name" class="col-sm-12 col-md-4 col-form-label"
-            >Phone</label
-          >
+          <label for="name" class="col-sm-12 col-md-4 col-form-label">Phone</label>
           <div class="col-sm-12 col-md-8">
-            <input
-              type="text"
-              class="form-control"
-              formControlName="phone"
-              required
-            />
+            <input type="text" AllowOnlyNumber class="form-control" formControlName="phone" required />
           </div>
         </div>
         <!-- <input type="file" name="files" formControlName="file" /> -->
         <div class="text-center">
-          <input
-            type="submit"
-            class="btn btn-primary"
-            value="Sign Up"
-            [disabled]="profileForm.invalid"
-          />
+          <input type="submit" class="btn btn-primary" value="Sign Up" [disabled]="profileForm.invalid" />
         </div>
       </div>
     </div>
